--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 title: Peter Amante-Roberts
-#logo: /images/img.png
-#show_downloads: true
+logo: linkedin-modified.png
 theme: jekyll-theme-minimal
